<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="307dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:background="@drawable/button_back"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/instructions"
                android:textAlignment="center"
                android:textColor="#1C1CB5"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/insts_intro"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/button_back"
                android:backgroundTint="@color/white"
                android:padding="2dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/red_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/insts_red"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:background="@drawable/button_back"
                android:backgroundTint="@color/white"
                android:padding="3dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/green_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/insts_green"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:background="@drawable/button_back"
                android:backgroundTint="@color/white"
                android:padding="3dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/my_details"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/button_back"
                android:backgroundTint="@color/white"
                android:padding="3dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/insts_end"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="italic"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_back"
                android:backgroundTint="@color/white"
                android:padding="3dp"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>